--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,5 +7,7 @@ sql:
       go:
         package: "db"
         emit_json_tags: true
+        emit_interface: true
+        emit_empty_slices: true
         out: "./db/sqlc"
         sql_package: "pgx/v5"
